Fix Java deprecations (#1564)
Signed-off-by: Wouter Born <github@maindrain.net>